--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install: travis_retry npm install && npm install -g bower && bower install
 script:
   - gulp lint:js
   - gulp lint:html
-  - travis_retry gulp test:mobile
+  # - travis_retry gulp test:mobile
   - travis_retry gulp test:desktop
-  - travis_retry gulp test:mobile:shadow
-  - travis_retry gulp test:desktop:shadow
+  # - travis_retry gulp test:mobile:shadow
+  # - travis_retry gulp test:desktop:shadow
