--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaadin-date-picker",
-  "version": "1.2.3.5",
+  "version": "1.2.3.5a",
   "description": "Polymer element providing a date selection field with scrollable month calendar",
   "main": "vaadin-date-picker.html",
   "repository": "vaadin/vaadin-date-picker",
